# microdsp-zephyr-demos

./: .gitignore  AddRustLib.cmake  AddRustLibrary.cmake  CMakeLists.txt  Kconfig  README.md  TODO.md  nrf52840dk_nrf52840.overlay  nrf5340dk_nrf5340_cpuapp_ns.overlay  prj.conf  wm8758_clk.js  wm8904_clk.js  wm8904_fll.py  zephyr_add_rust_library.cmake
microdsp_demo/: Cargo.toml  disassemble.sh  release.thumbv8m.main-none-eabihf.txt
microdsp_demo/include/microdsp_demo/: microdsp_demo.h
microdsp_demo/src/: c_allocator.rs  c_api.rs  lib.rs  mpm_demo.rs  nlms_demo.rs  sfnov_demo.rs
microdsp_demos/: Cargo.toml  disassemble.sh
microdsp_demos/src/: c_allocator.rs  c_api.rs  lib.rs  mpm_demo.rs  sfnov_demo.rs
movies/: sfnov.mov
rust-lib/: Cargo.toml
rust-lib/src/: lib.rs
rust_lib/: Cargo.toml
rust_lib/include/rust_lib/: rust_lib.h
rust_lib/src/: c_allocator.rs  lib.rs
rust_lib_2/: Cargo.toml
rust_lib_2/include/rust_lib_2/: rust_lib_2.h
rust_lib_2/src/: lib.rs
rust_looper/: Cargo.toml
rust_looper/include/rust_looper/: rust_looper.h
rust_looper/src/: c_allocator.rs  lib.rs  looper.rs
src/: audio_callbacks.h  audio_cfg.h  audio_processing.h  buttons.c  buttons.h  codec.c  codec.h  i2s.c  i2s.h  i2s_nrfx.c  i2s_nrfx.h  leds.c  leds.h  main.c
src/codecs/: wm8758.c  wm8758.h  wm8904.c  wm8904.h
