[package]
name = "microdsp-demo"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[profile.release]
# lto = true

[dependencies]
microdsp = { path = "../../../rust-audio/microdsp" }
micromath = "2.0.0"

[features]
default = ["mpm_demo"]
nlms_demo = []
sfnov_demo = []
mpm_demo = []