[package]
name = "microdsp-demo"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[profile.release]
# lto = true

# microdsp compiled in default debug mode seems to
# take up a lot of stack space causing stack overflows.
# https://docs.rust-embedded.org/book/unsorted/speed-vs-size.html
[profile.dev.package.microdsp]
opt-level = 3

[dependencies]
microdsp = { path = "../../../rust-audio/microdsp" }
micromath = "2.0.0"

[features]
default = ["mpm_demo"]
nlms_demo = []
sfnov_demo = []
mpm_demo = []